<resources>
    <string name="app_name">MAMSA</string>
    <string name="attendance_title">出席管理画面</string>
    <string name="attendance_read_start_label">読み取り開始</string>
    <string name="attendance_read_finish_label">読み取り終了</string>
    <string name="disaster_title">安否確認画面</string>
    <string name="disaster_send_resume_label">送信再開</string>
    <string name="disaster_send_pause_label">送信停止</string>
    <string name="listmaker_title">リスト作成画面</string>
    <string name="register_title">学生登録画面</string>
    <string name="register_read_nfc_info">読み取ったNFCタグの情報</string>
    <string name="register_nfc_id">UID:</string>
    <string name="register_registration_info">登録情報:</string>
    <string name="register_not_registered">登録なし</string>
    <string name="camera_title">カメラ</string>
    <string name="camera_capture_label">撮影</string>
    <string name="file_choose_title">ファイル選択画面</string>
    <string name="file_choose_icon">ファイルアイコン</string>
    <string name="file_choose_parent">[上のディレクトリへ]</string>
    <string name="setting_title">設定画面</string>
    <string name="setting_general_title">一般設定</string>
    <string name="setting_behavior_title">挙動設定</string>
    <string name="setting_behavior_student_no_title">リスト外学籍番号の読取</string>
    <string name="setting_behavior_student_no_dialog">ダイアログを表示する</string>
    <string name="setting_behavior_student_no_ignore">無視する</string>
    <string name="setting_behavior_nfc_id_title">未知のNFCタグの読取</string>
    <string name="setting_behavior_nfc_id_dialog">ダイアログを表示する</string>
    <string name="setting_behavior_nfc_id_ignore">無視する</string>
    <string name="setting_location_title">位置情報設定</string>
    <string name="setting_add_location_title">位置情報を付加する</string>
    <string name="setting_add_location_summary">出席データに位置情報を付加します。</string>
    <string name="setting_location_provider_title">位置情報の取得方法</string>
    <string name="setting_location_provider_network">ネットワーク</string>
    <string name="setting_location_provider_gps">GPS</string>
    <string name="setting_location_interval_title">位置情報の更新間隔</string>
    <string name="setting_location_format_title">位置情報の出力フォーマット</string>
    <string name="setting_location_format_output_null">出力なし</string>
    <string name="setting_location_format_latitude_title">緯度</string>
    <string name="setting_location_format_latitude_summary">緯度を出力します。</string>
    <string name="setting_location_format_longitude_title">経度</string>
    <string name="setting_location_format_longitude_summary">経度を出力します。</string>
    <string name="setting_location_format_accuracy_title">精度</string>
    <string name="setting_location_format_accuracy_summary">精度を出力します。</string>
    <string name="setting_save_title">保存設定</string>
    <string name="setting_change_attendance_dir_title">出席データの保存先</string>
    <string name="setting_change_attendance_name_title">出席データの保存名</string>
    <string name="setting_change_attendance_name_message">以下の変数が利用可能です。\n%S : 科目名, %t : 授業時間\n%y : 年, %M : 月, %d : 日\n%h : 時, %m : 分, %s : 秒\n拡張子は自動で付加されます。</string>
    <string name="setting_auto_save_title">データを自動保存する</string>
    <string name="setting_auto_save_summary">指定された時間毎に出席データを自動的に保存します。この機能を使用する場合、画面の自動回転はオフにしてください。</string>
    <string name="setting_auto_save_interval_title">自動保存の間隔</string>
    <string name="setting_disaster_title">災害設定</string>
    <string name="setting_disaster_mode_title">災害モードを有効にする</string>
    <string name="setting_disaster_mode_summary">災害モードを有効にします。</string>
    <string name="setting_password_title">パスワードの変更</string>
    <string name="setting_password_registered">設定済み</string>
    <string name="setting_password_not_registered">未設定(test1234)</string>
    <string name="setting_password_old_password">旧パスワード:</string>
    <string name="setting_password_old_password_hint">旧パスワードを入力</string>
    <string name="setting_password_new_password">新パスワード:</string>
    <string name="setting_password_new_password_hint">新パスワードを入力(16文字まで)</string>
    <string name="setting_password_new_password_conf">新パスワード(確認):</string>
    <string name="setting_password_new_password_conf_hint">新パスワードをもう一度入力</string>
    <string name="setting_password_available_character">パスワードには、半角英数字およびアンダーバーが利用可能です。</string>
    <string name="setting_ip_address_title">IPアドレス</string>
    <string name="setting_send_server_title">サーバに送信する</string>
    <string name="setting_send_server_summary">出席データをサーバに送信します。</string>
    <string name="setting_server_address_title">サーバのアドレス</string>
    <string name="setting_other_title">その他</string>
    <string name="setting_license_title">ライセンス表記</string>
    <string name="setting_license_summary">このアプリに使用されている各ライセンスを表示することができます。</string>
    <string name="setting_license_apache_title">Apache License</string>
    <string name="setting_license_apache_summary">Apache Licenseを表示します。</string>
    <string name="setting_photo_title">写真の設定</string>
    <string name="setting_capture_mode_title">撮影モード</string>
    <string name="setting_capture_mode_photo">写真</string>
    <string name="setting_capture_mode_movie">動画</string>
    <string name="setting_rotation_title">写真撮影時の向き</string>
    <string name="setting_rotation_auto">自動で切り替える</string>
    <string name="setting_rotation_user">端末の設定に従う</string>
    <string name="setting_rotation_portrait">ポートレート(縦)</string>
    <string name="setting_rotation_landscape">ランドスケープ(横)</string>
    <string name="setting_use_take_autofocus_title">撮影時にAFを行う</string>
    <string name="setting_use_take_autofocus_summary">オートフォーカスが行われていない場合、撮影時にオートフォーカスを行います。端末により、撮影時にアプリが強制終了される場合があります。</string>
    <string name="setting_use_tap_autofocus_title">タップ時にAFを行う</string>
    <string name="setting_use_tap_autofocus_summary">画面タップ時にオートフォーカスを行います。</string>
    <string name="setting_picture_size_title">撮影する画像のサイズ</string>
    <string name="setting_picture_size_summary">端末とサイズの組み合わせによっては、撮影後に一時的にプレビューが乱れることがあります。</string>
    <string name="setting_movie_title">動画の設定</string>
    <string name="setting_movie_quality_title">撮影する動画の画質</string>
    <string name="setting_movie_quality_low">低画質</string>
    <string name="setting_movie_quality_high">高画質</string>
    <string name="header_student_no">学籍番号</string>
    <string name="header_student_name">氏名</string>
    <string name="header_student_num_of_nfc_id">数</string>
    <string name="header_attendance_no">出番</string>
    <string name="header_student_status">出欠</string>
    <string name="menu_make_list">リストを作成する</string>
    <string name="menu_setting">設定画面を開く</string>
    <string name="menu_open">CSVファイルを開く</string>
    <string name="menu_save">CSVファイルに保存する</string>
    <string name="menu_new_sheet">新規シート</string>
    <string name="menu_add_class">所属を追加する</string>
    <string name="menu_edit_class_name">所属名を変更する</string>
    <string name="menu_edit_info">講義情報を編集する</string>
    <string name="menu_show_invisible_file">隠しファイルを表示する</string>
    <string name="menu_hide_invisible_file">隠しファイルを隠す</string>
    <string name="menu_create_file">新規ファイルを作成する</string>
    <string name="menu_create_directory">新規フォルダを作成する</string>
    <string name="menu_add_student">学生データを追加する</string>
    <string name="menu_add_attendance">出席データを追加する</string>
    <string name="menu_refresh">マスタを再読み込み</string>
    <string name="menu_read_from_csv_file">追加読み込み</string>
    <string name="menu_open_register">学生登録画面を開く</string>
    <string name="menu_operation">操作</string>
    <string name="dialog_ask">確認</string>
    <string name="dialog_ask_exit_without_saving">保存せずに終了してもよろしいですか?</string>
    <string name="dialog_ask_remove_without_saving">保存されていない内容を破棄してもよろしいですか?</string>
    <string name="dialog_ask_add_student_by_student_no">リスト外の学籍番号が読み取られました。該当する学生データを追加しますか?</string>
    <string name="dialog_attendance_menu_title">出欠メニュー</string>
    <string name="dialog_ask_overwrite">に上書きしてもよろしいですか?</string>
    <string name="dialog_save_as">別名で保存</string>
    <string name="dialog_fetching_location">現在地を取得しています…\n(バックボタンで中止)</string>
    <string name="dialog_ask_open_list_maker">リスト作成画面を開きますか?</string>
    <string name="dialog_ask_open_gps_preference">端末の設定でGPSが無効になっています。GPSの設定画面を開きますか?(キャンセルした場合、\"位置情報を付加する\"は無効になります)</string>
    <string name="dialog_student_menu_title">学生メニュー</string>
    <string name="dialog_student_menu_edit">編集</string>
    <string name="dialog_student_menu_nfc_id_remove">NFCタグを削除</string>
    <string name="dialog_student_menu_remove">削除</string>
    <string name="dialog_edit_student_title">学生データの編集</string>
    <string name="dialog_student_no_label">学籍番号:</string>
    <string name="dialog_student_no_hint">学籍番号を入力</string>
    <string name="dialog_class_name_label">所属:</string>
    <string name="dialog_class_name_hint">所属名を入力</string>
    <string name="dialog_student_name_label">氏名:</string>
    <string name="dialog_student_name_hint">氏名を入力</string>
    <string name="dialog_student_ruby_label">カナ:</string>
    <string name="dialog_student_ruby_hint">カナを入力</string>
    <string name="dialog_remove_nfc_id_title">NFCタグの削除</string>
    <string name="dialog_remove_nfc_id_message">のNFCタグを削除しますか?</string>
    <string name="dialog_remove_student_title">学生データの削除</string>
    <string name="dialog_remove_student_message">のデータを削除しますか?</string>
    <string name="dialog_remove_read_nfc_id_title">登録の解除</string>
    <string name="dialog_remove_read_nfc_id_message">このUIDの登録を解除しますか?</string>
    <string name="dialog_edit_class_name_title">所属名の変更</string>
    <string name="dialog_edit_subject_title">科目名の編集</string>
    <string name="dialog_subject_hint">科目名を入力</string>
    <string name="dialog_edit_time_title">授業時間の編集</string>
    <string name="dialog_time_hint">授業時間を入力</string>
    <string name="dialog_totalization_title">確認状況</string>
    <string name="dialog_totalization_class_label">所属</string>
    <string name="dialog_totalization_total_label">合計</string>
    <string name="dialog_totalization_whole">全体</string>
    <string name="dialog_create_file_title">新規ファイルの作成</string>
    <string name="dialog_create_file_hint">ファイル名を入力</string>
    <string name="dialog_create_directory_title">新規フォルダの作成</string>
    <string name="dialog_create_directory_hint">フォルダ名を入力</string>
    <string name="dialog_disaster_menu_capture_photo">写真を撮影</string>
    <string name="dialog_disaster_menu_capture_movie">動画を撮影</string>
    <string name="dialog_add_student_menu_title">学生データの追加</string>
    <string name="dialog_add_attendance_menu_title">出席データの追加</string>
    <string name="dialog_add_attendance_menu_list">リストから追加する</string>
    <string name="dialog_add_attendance_menu_search">学籍番号で検索する</string>
    <string name="dialog_add_attendance_menu_manual">手動で登録する</string>
    <string name="dialog_csv_file_list_title">追加元リストの選択</string>
    <string name="dialog_search_student_no_title">学籍番号での検索</string>
    <string name="dialog_search_student_no_hint">学籍番号を入力</string>
    <string name="dialog_input_student_info_title">手動での登録</string>
    <string name="dialog_ask_register_read_id">リストにないNFCタグを読み取りました。読み取ったNFCタグをリストに登録しますか?</string>
    <string name="dialog_register_id_menu_title">NFCタグの登録</string>
    <string name="dialog_register_id_menu_barcode">バーコードを読み取る</string>
    <string name="dialog_reading_barcode">登録する学生のバーコードを読み取ってください。\n(バックボタンで中止)</string>
    <string name="dialog_ask_overwrite_student_master">学生マスタを上書きしてもよろしいですか?</string>
    <string name="dialog_refreshing_master_file_title">学生マスタの再読み込み</string>
    <string name="dialog_add_class_title">所属の追加</string>
    <string name="dialog_file_name_label">ファイル名:</string>
    <string name="dialog_file_name_hint">ファイル名を入力</string>
    <string name="dialog_operation_menu_title">操作</string>
    <string name="dialog_operation_menu_search">学生番号で検索する</string>
    <string name="attendance">出席</string>
    <string name="lateness">遅刻</string>
    <string name="leave_early">早退</string>
    <string name="absence">欠席</string>
    <string name="extension_csv">.csv</string>
    <string name="character_for_password">0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz_</string>
</resources>