<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_open_register"
          android:title="@string/menu_open_register"
          android:icon="@drawable/ic_new_sheet"
          android:numericShortcut="1" />
    <item android:id="@+id/menu_setting"
          android:title="@string/menu_setting"
          android:icon="@android:drawable/ic_menu_preferences"
          android:numericShortcut="2" />
    <item android:id="@+id/menu_add_attendance"
          android:title="@string/menu_add_attendance"
          android:icon="@android:drawable/ic_menu_add"
          android:numericShortcut="3" />
    <item android:id="@+id/menu_refresh"
          android:title="@string/menu_refresh"
          android:icon="@drawable/ic_menu_refresh"
          android:numericShortcut="4" />
    <item android:id="@+id/menu_open"
          android:title="@string/menu_read_from_csv_file"
          android:icon="@android:drawable/ic_menu_set_as"
          android:numericShortcut="5" />
    <item android:id="@+id/menu_save"
          android:title="@string/menu_save"
          android:icon="@android:drawable/ic_menu_save"
          android:numericShortcut="6" />
</menu>