<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/setting_password_old_password" />
        <EditText android:id="@+id/setting_old_password"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textPassword"
                  android:digits="@string/character_for_password"
                  android:maxLines="1"
                  android:maxLength="16"
                  android:hint="@string/setting_password_old_password_hint" />
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/setting_password_new_password" />
        <EditText android:id="@+id/setting_new_password"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textPassword"
                  android:digits="@string/character_for_password"
                  android:maxLines="1"
                  android:maxLength="16"
                  android:hint="@string/setting_password_new_password_hint" />
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/setting_password_new_password_conf" />
        <EditText android:id="@+id/setting_new_password_conf"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textPassword"
                  android:digits="@string/character_for_password"
                  android:maxLines="1"
                  android:maxLength="16"
                  android:hint="@string/setting_password_new_password_conf_hint" />
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/setting_password_available_character" />
    </LinearLayout>
</ScrollView>