<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_make_list"
          android:title="@string/menu_make_list"
          android:icon="@drawable/ic_new_sheet"
          android:numericShortcut="1" />
    <item android:id="@+id/menu_setting"
          android:title="@string/menu_setting"
          android:icon="@android:drawable/ic_menu_preferences"
          android:numericShortcut="2" />
    <item android:id="@+id/menu_open"
          android:title="@string/menu_open"
          android:icon="@android:drawable/ic_menu_set_as"
          android:numericShortcut="3" />
    <item android:id="@+id/menu_save"
          android:title="@string/menu_save"
          android:icon="@android:drawable/ic_menu_save"
          android:numericShortcut="4" />
</menu>