<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_edit_class_name"
          android:title="@string/menu_edit_class_name"
          android:icon="@android:drawable/ic_menu_edit"
          android:numericShortcut="1" />
    <item android:id="@+id/menu_setting"
          android:title="@string/menu_setting"
          android:icon="@android:drawable/ic_menu_preferences"
          android:numericShortcut="2" />
    <item android:id="@+id/menu_add_student"
          android:title="@string/menu_add_student"
          android:icon="@android:drawable/ic_menu_add"
          android:numericShortcut="3" />
    <item android:id="@+id/menu_refresh"
          android:title="@string/menu_refresh"
          android:icon="@drawable/ic_menu_refresh"
          android:numericShortcut="4" />
</menu>