<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/dialog_class_name_label" />
        <EditText android:id="@+id/dialog_class_name"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="text"
                  android:maxLines="1"
                  android:hint="@string/dialog_class_name_hint" />
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/dialog_file_name_label" />
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <EditText android:id="@+id/dialog_file_name"
                      android:layout_width="0dip"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:inputType="text"
                      android:maxLines="1"
                      android:hint="@string/dialog_file_name_hint" />
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/extension_csv" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>