<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <TextView android:id="@+id/student_num"
                  android:layout_width="0dip"
                  android:layout_height="wrap_content"
                  android:layout_weight="2"
                  android:gravity="center"
                  android:textSize="20sp"
                  android:text="@string/header_student_num" />
        <include layout="@layout/vertical_divider" />
        <TextView android:id="@+id/student_no"
                  android:layout_width="0dip"
                  android:layout_height="wrap_content"
                  android:layout_weight="4"
                  android:gravity="center"
                  android:textSize="20sp"
                  android:text="@string/header_student_no" />
        <include layout="@layout/vertical_divider" />
        <TextView android:id="@+id/student_name"
                  android:layout_width="0dip"
                  android:layout_height="wrap_content"
                  android:layout_weight="6"
                  android:gravity="center"
                  android:textSize="20sp"
                  android:text="@string/header_student_name" />
        <include layout="@layout/vertical_divider" />
        <TextView android:id="@+id/student_attendance"
                  android:layout_width="0dip"
                  android:layout_height="wrap_content"
                  android:layout_weight="2"
                  android:gravity="center"
                  android:textSize="20sp"
                  android:text="@string/header_student_status" />
    </LinearLayout>
    <include layout="@layout/horizontal_divider" />
    <ListView android:id="@+id/student_list"
              android:layout_width="match_parent"
              android:layout_height="0dip"
              android:layout_weight="1"
              android:divider="#111"
              android:dividerHeight="1dip"
              android:fastScrollEnabled="true"
              android:listSelector="@drawable/list_selector_background"
              android:choiceMode="singleChoice" />
    <include layout="@layout/horizontal_divider" />
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <Spinner android:id="@+id/attendance_kind"
                 android:layout_width="0dip"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:entries="@array/dialog_attendance_menu" />
        <Button android:id="@+id/read_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/attendance_read_start_label" />
    </LinearLayout>
</LinearLayout>